# svelte-rust-event-scheduler

./: LICENSE  compose.yml
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  palle.http
backend/api/: Cargo.toml  build.rs
backend/api/proto/: schedule_service.proto
backend/api/src/: lib.rs
backend/api/src/auth/: google.rs  mod.rs
backend/api/src/grpc/: entity_response_conversion.rs  mod.rs
backend/entity/: Cargo.toml
backend/entity/src/: event.rs  event_user.rs  lib.rs  prelude.rs  round_max_users.rs  user.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240210_000001_create_table.rs  m20240212_080458_import_xlsx_file.rs  m20240214_000121_import_csv.rs  main.rs
backend/proto/: schedule_service.proto
backend/seed/: add_events.sql
backend/seed/xlsx/: ATTIVITÀ FORUM DEFINITIVE.xlsx
backend/service/: Cargo.toml
backend/service/src/: lib.rs  mutation.rs  query.rs
backend/src/: main.rs  server.rs
backend/src/g_rpc/: mod.rs
frontend/: .eslintignore  bun.lockb  package.json  pnpm-lock.yaml  svelte.config.js
frontend/src/: app.html
frontend/src/routes/: +page.svelte
