[package]
name = "svelte-rust-event-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.11.0" , features = ["tls", "zstd", "gzip"] }
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
once_cell = "1.19.0"
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
color-eyre = "0.6.2"
futures = "0.3.30"

[build-dependencies]
tonic-build = "0.11.0"

[profile.dev.package.backtrace]
opt-level = 3