[package]
name = "svelte-rust-event-scheduler"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = [
    ".",
    "api",
    "entity",
    "migration",
    "service",
]

[dependencies]
svelte-rust-event-scheduler-api = { path = "api" }
tonic = "0.11.0"
tokio = { version = "1.29", features = ["macros", "rt-multi-thread", "full"] }
color-eyre = "0.6.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[[bin]]
name = "server"
path = "./src/server.rs"

# Rust does not inline across crates if link-time optimization (LTO) is off, which it is by default.
[profile.release]
lto = true
