[package]
name = "svelte-rust-event-scheduler-api"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }
svelte-rust-event-scheduler-service = { path = "../service" }
dotenvy = "0.15.7"
tonic = { version = "0.11.0", features = ["tls", "zstd", "gzip"] }
prost = "0.12"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
once_cell = "1.19.0"
futures = "0.3.30"
thiserror = "1.0.57"
tonic-thiserror = "0.1.0"
openidconnect = "3.4.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.196", features = ["derive"] }
axum = "0.7.4"
axum-login = "0.13.1"
axum-sessions = "0.6.1"
prost-types = "0.12.3"

[build-dependencies]
tonic-build = "0.11.0"

